--- a/team.html
+++ b/team.html
@@ -288,12 +288,12 @@
       <div class="main__border"></div>
       <div class="container team_clients__container">
         <div class="team_slider__block">
-          <div class="project__info">
-            <div class="project__info_left">
-              <h4 class="project__head">Наши клиенты</h4>
+          <div class="team_slider__info">
+            <div class="team_slider__info_left">
+              <h4 class="team_slider__head">Наши клиенты</h4>
             </div>
-            <div class="project__info_right">
-              <p class="project__desc">Commitment to the highest quality production standards, a broad expertise, and a genuine strive to help our clients have secured us strategic cooperation with market-leading companies in many sectors and regions.</p>
+            <div class="team_slider__info_right">
+              <p class="team_slider__desc">Commitment to the highest quality production standards, a broad expertise, and a genuine strive to help our clients have secured us strategic cooperation with market-leading companies in many sectors and regions.</p>
             </div>
           </div>
         </div>
@@ -339,6 +339,92 @@
             </div>
           </li>
         </ul>
+      </div>
+    </section>
+    <section class="team_comments" data-scroll-section>
+      <div class="main__border"></div>
+      <div class="container team_comments__container">
+        <div class="team_comments__block">
+          <div class="team_comments__buttons">
+            <div class="team_comments__quotes">
+              <svg width="45" height="45" viewBox="0 0 45 45" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <rect width="45" height="45" fill="currentColor"/>
+                <path d="M25 15H33.2917V23.3L29.9667 29.95H25.8333L29.1417 23.3H25V15Z" fill="currentColor"/>
+                <path d="M11 15H19.2917V23.3L15.9667 29.95H11.8333L15.1417 23.3H11V15Z" fill="currentColor"/>
+              </svg>
+            </div>
+            <div class="team_comments__navigation">
+              <div class="swiper-button-prev team_comments__prev">
+                <div class="btn__arrow">
+                  <div class="btn__side btn__side_hover">
+                    <svg width="12" height="9" viewBox="0 0 12 9" fill="none" xmlns="http://www.w3.org/2000/svg">
+                      <path d="M1.11099 4.18209C0.915723 4.37735 0.915723 4.69394 1.11099 4.8892L4.29297 8.07118C4.48823 8.26644 4.80481 8.26644 5.00007 8.07118C5.19533 7.87592 5.19533 7.55933 5.00007 7.36407L2.17165 4.53564L5.00007 1.70722C5.19533 1.51196 5.19533 1.19537 5.00007 1.00011C4.80481 0.804849 4.48823 0.804849 4.29297 1.00011L1.11099 4.18209ZM11.4645 4.03564L1.46454 4.03564V5.03564L11.4645 5.03564V4.03564Z" fill="currentColor"/>
+                    </svg>
+                  </div>
+                  <div class="btn__side btn__side_default">
+                    <svg width="12" height="9" viewBox="0 0 12 9" fill="none" xmlns="http://www.w3.org/2000/svg">
+                      <path d="M1.11099 4.18209C0.915723 4.37735 0.915723 4.69394 1.11099 4.8892L4.29297 8.07118C4.48823 8.26644 4.80481 8.26644 5.00007 8.07118C5.19533 7.87592 5.19533 7.55933 5.00007 7.36407L2.17165 4.53564L5.00007 1.70722C5.19533 1.51196 5.19533 1.19537 5.00007 1.00011C4.80481 0.804849 4.48823 0.804849 4.29297 1.00011L1.11099 4.18209ZM11.4645 4.03564L1.46454 4.03564V5.03564L11.4645 5.03564V4.03564Z" fill="currentColor"/>
+                    </svg>
+                  </div>
+                </div>
+              </div>
+              <div class="swiper-button-next team_comments__next">
+                <div class="btn__arrow">
+                  <div class="btn__side btn__side_hover">
+                    <svg width="11" height="9" viewBox="0 0 11 9" fill="none" xmlns="http://www.w3.org/2000/svg">
+                      <path d="M10.8181 4.8892C11.0134 4.69394 11.0134 4.37735 10.8181 4.18209L7.63611 1.00011C7.44085 0.804849 7.12427 0.804849 6.929 1.00011C6.73374 1.19537 6.73374 1.51196 6.929 1.70722L9.75743 4.53564L6.929 7.36407C6.73374 7.55933 6.73374 7.87592 6.929 8.07118C7.12427 8.26644 7.44085 8.26644 7.63611 8.07118L10.8181 4.8892ZM0.464539 5.03564L10.4645 5.03564V4.03564L0.464539 4.03564L0.464539 5.03564Z" fill="currentColor"/>
+                    </svg>
+                  </div>
+                  <div class="btn__side btn__side_default">
+                    <svg width="11" height="9" viewBox="0 0 11 9" fill="none" xmlns="http://www.w3.org/2000/svg">
+                      <path d="M10.8181 4.8892C11.0134 4.69394 11.0134 4.37735 10.8181 4.18209L7.63611 1.00011C7.44085 0.804849 7.12427 0.804849 6.929 1.00011C6.73374 1.19537 6.73374 1.51196 6.929 1.70722L9.75743 4.53564L6.929 7.36407C6.73374 7.55933 6.73374 7.87592 6.929 8.07118C7.12427 8.26644 7.44085 8.26644 7.63611 8.07118L10.8181 4.8892ZM0.464539 5.03564L10.4645 5.03564V4.03564L0.464539 4.03564L0.464539 5.03564Z" fill="currentColor"/>
+                    </svg>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="team_comments__swiper swiper">
+            <ul class="team_comments__list swiper-wrapper">
+              <li class="team_comments__item swiper-slide">
+                <p class="team_comments__review">I am pleased to recommend Anyera, we have assigned to this company already two projects and they was accomplished perfect — I like their organization of work, their initiative and support, and that they provide assistance after the project is completed. We are satisfied of particular service provided by Anyera and we will be glad to continue our cooperation in the future.</p>
+                <div class="team_comments__flex">
+                  <div class="team_comments__image">
+                    <img src="img/clients/clients.webp" alt="">
+                  </div>
+                  <div class="team_comments__info">
+                    <h4 class="team_comments__name">Алина Алинова</h4>
+                    <p class="team_comments__job">Финансовый директор</p>
+                  </div>
+                </div>
+              </li>
+              <li class="team_comments__item swiper-slide">
+                <p class="team_comments__review">I am pleased to recommend Anyera, we have assigned to this company already two projects and they was accomplished perfect — I like their organization of work, their initiative and support, and that they provide assistance after the project is completed. We are satisfied of particular service provided by Anyera and we will be glad to continue our cooperation in the future.</p>
+                <div class="team_comments__flex">
+                  <div class="team_comments__image">
+                    <img src="img/clients/clients.webp" alt="">
+                  </div>
+                  <div class="team_comments__info">
+                    <h4 class="team_comments__name">Алина Алинова</h4>
+                    <p class="team_comments__job">Финансовый директор</p>
+                  </div>
+                </div>
+              </li>
+              <li class="team_comments__item swiper-slide">
+                <p class="team_comments__review">I am pleased to recommend Anyera, we have assigned to this company already two projects and they was accomplished perfect — I like their organization of work, their initiative and support, and that they provide assistance after the project is completed. We are satisfied of particular service provided by Anyera and we will be glad to continue our cooperation in the future.</p>
+                <div class="team_comments__flex">
+                  <div class="team_comments__image">
+                    <img src="img/clients/clients.webp" alt="">
+                  </div>
+                  <div class="team_comments__info">
+                    <h4 class="team_comments__name">Алина Алинова</h4>
+                    <p class="team_comments__job">Финансовый директор</p>
+                  </div>
+                </div>
+              </li>
+            </ul>
+          </div>
+        </div>
       </div>
     </section>
     <footer class="footer" data-scroll-section>
