--- a/contacts.html
+++ b/contacts.html
@@ -26,7 +26,7 @@
 </head>
 <body>
   <div class="overlay"></div>
-  <div class="preloader">
+  <!-- <div class="preloader">
     <div class="preloader__top"></div>
     <svg class="preloader__image" xmlns="http://www.w3.org/2000/svg" width="31" height="31" viewBox="0 0 31 31" fill="none">
       <path d="M2.32467 23.0762C0.852365 20.7515 0 17.9953 0 15.04C0 6.73365 6.73365 0 15.04 0C15.2501 0 15.4591 0.00430619 15.6671 0.012836L2.32467 23.0762Z" fill="currentColor"/>
@@ -34,7 +34,7 @@
       <path d="M26.5359 24.7384L23.4677 20.3018L19.5899 20.0344C18.4098 19.953 17.3278 19.3482 16.6402 18.3855L16.0843 17.6073C15.922 17.38 16.0395 17.0606 16.3105 16.9929L21.2899 15.7481L17.1017 7.81303L6.03521 26.986C6.02162 27.0095 6.00783 27.0329 5.9938 27.056C8.51128 28.9544 11.6444 30.0799 15.0403 30.0799C19.6509 30.0799 23.777 28.0052 26.5359 24.7384Z" fill="currentColor"/>
     </svg>
     <div class="preloader__bottom"></div>
-  </div>
+  </div> -->
   <div class="cursor">
     <div class="cursor__block">
       <div class="cursor__wrapper">
@@ -354,12 +354,31 @@
               <li class="header__nav_item">
                 <a href="services.html" class="header__nav_link">
                   <h3 class="text text__big"><span class="text__rotate">Услуги</span></h3>
+                  <svg width="11" height="19" viewBox="0 0 11 19" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path fill-rule="evenodd" clip-rule="evenodd" d="M0.959557 0.792893C1.35008 0.402369 1.98325 0.402369 2.37377 0.792893L10.3738 8.79289C10.7643 9.18342 10.7643 9.81658 10.3738 10.2071L2.37377 18.2071C1.98325 18.5976 1.35008 18.5976 0.959557 18.2071C0.569033 17.8166 0.569033 17.1834 0.959557 16.7929L8.25245 9.5L0.959557 2.20711C0.569033 1.81658 0.569033 1.18342 0.959557 0.792893Z" fill="currentColor"/>
+                  </svg>
                 </a>
+                <ul class="header__subnav_list">
+                  <li class="header__subnav_item"><a href="#" class="header__subnav_link"><p class="text"><span class="text__rotate">Аналитика</span></p></a></li>
+                  <li class="header__subnav_item"><a href="#" class="header__subnav_link"><p class="text"><span class="text__rotate">Дизайн</span></p></a></li>
+                  <li class="header__subnav_item"><a href="#" class="header__subnav_link"><p class="text"><span class="text__rotate">Веб-разработка</span></p></a></li>
+                  <li class="header__subnav_item"><a href="#" class="header__subnav_link"><p class="text"><span class="text__rotate">Поддержка и развитие</span></p></a></li>
+                  <li class="header__subnav_item"><a href="#" class="header__subnav_link"><p class="text"><span class="text__rotate">Автоматизация</span></p></a></li>
+                  <li class="header__subnav_item"><a href="price.html" class="header__subnav_link"><p class="text"><span class="text__rotate">Прайс-лист</span></p></a></li>
+                </ul>
               </li>
               <li class="header__nav_item">
-                <a href="team.html" class="header__nav_link">
-                  <h3 class="text text__big"><span class="text__rotate">Команда</span></h3>
+                <a href="#" class="header__nav_link">
+                  <h3 class="text text__big"><span class="text__rotate">О компании</span></h3>
+                  <svg width="11" height="19" viewBox="0 0 11 19" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path fill-rule="evenodd" clip-rule="evenodd" d="M0.959557 0.792893C1.35008 0.402369 1.98325 0.402369 2.37377 0.792893L10.3738 8.79289C10.7643 9.18342 10.7643 9.81658 10.3738 10.2071L2.37377 18.2071C1.98325 18.5976 1.35008 18.5976 0.959557 18.2071C0.569033 17.8166 0.569033 17.1834 0.959557 16.7929L8.25245 9.5L0.959557 2.20711C0.569033 1.81658 0.569033 1.18342 0.959557 0.792893Z" fill="currentColor"/>
+                  </svg>
                 </a>
+                <ul class="header__subnav_list">
+                  <li class="header__subnav_item"><a href="team.html" class="header__subnav_link"><p class="text"><span class="text__rotate">Команда</span></p></a></li>
+                  <li class="header__subnav_item"><a href="certificates.html" class="header__subnav_link"><p class="text"><span class="text__rotate">Сертификаты</span></p></a></li>
+                  <li class="header__subnav_item"><a href="competencies.html" class="header__subnav_link"><p class="text"><span class="text__rotate">Компетенции партнера 1С-Битрикс</span></p></a></li>
+                </ul>
               </li>
               <li class="header__nav_item">
                 <a href="projects.html" class="header__nav_link">
@@ -372,13 +391,13 @@
                 </a>
               </li>
               <li class="header__nav_item">
-                <a href="articles.html" class="header__nav_link">
-                  <h3 class="text text__big"><span class="text__rotate">Статьи</span></h3>
+                <a href="contacts.html" class="header__nav_link">
+                  <h3 class="text text__big"><span class="text__rotate">Контакты</span></h3>
                 </a>
               </li>
               <li class="header__nav_item">
-                <a href="contacts.html" class="header__nav_link">
-                  <h3 class="text text__big"><span class="text__rotate">Контакты</span></h3>
+                <a href="articles.html" class="header__nav_link">
+                  <h3 class="text text__big"><span class="text__rotate">Медиа</span></h3>
                 </a>
               </li>
             </ul>
@@ -652,15 +671,15 @@
   </div>
   <script>
     window.onload = function () {
-      document.body.classList.add('loaded_hiding');
-      document.querySelector('.preloader__top').style.top = "-50%";
-      document.querySelector('.preloader__bottom').style.top = "100%";
-      window.scrollTo(0,0);
-      window.setTimeout(function () {
+    //   document.body.classList.add('loaded_hiding');
+    //   document.querySelector('.preloader__top').style.top = "-50%";
+    //   document.querySelector('.preloader__bottom').style.top = "100%";
+    //   window.scrollTo(0,0);
+    //   window.setTimeout(function () {
         document.body.classList.add('loaded');
-        document.body.classList.remove('loaded_hiding');
-        document.querySelector('.preloader').style.display = "none";
-      }, 500);
+    //     document.body.classList.remove('loaded_hiding');
+    //     document.querySelector('.preloader').style.display = "none";
+    //   }, 500);
     };
   </script>
   <script src="js/swiper.min.js"></script>
